1.0.1
  date: 2016-09-25
  changes:
  - Add configuration option to turn off module landing page

1.0.0
  date: 2016-09-08
  changes:
  - First release as the default module Builder template
  - Scaffold stream entities
  - Custom decorators for entity tables and forms
  - Automate bindings and routes
  - Generate language files
  - Default home page
  - Helper functions