@@ -1,9 +1,9 @@
 {
-    "name": "{vendor_name_lower}/{module_name_lower}-module",
+    "name": "{{vendor_name_lower}}/{{module_name_lower}}-module",
     "type": "streams-addon",
     "autoload": {
         "psr-4": {
-            "{vendor_name}\\{module_name}Module\\": "src/"
+            "{{vendor_name}}\\{{module_name}}Module\\": "src/"
         },
         "files": [
             "src/Helpers/helper_functions.php"
