@@ -49,7 +49,7 @@ return [
 	|	*/
 
 	'namespaces' => [
-		'{namespace}' => [
+		'{{namespace}}' => [
 			// 'field_slug_1' => [
 			// 	'column_template'    => '<span class="label label-info">{value}</span>'
 			// ],
@@ -91,7 +91,7 @@ return [
 	*/
 
 	'namespace_folder' => true,
-  
+
   /*
 	|--------------------------------------------------------------------------
 	| Home Page
