@@ -1,7 +1,7 @@
 <?php
 
 return [
-    'title'       => '{module_name}',
-    'name'        => '{module_name} Module',
-    'description' => '{description}'
+    'title'       => '{{module_name}}',
+    'name'        => '{{module_name}} Module',
+    'description' => '{{description}}'
 ];
