@@ -1,15 +1,15 @@
-<?php namespace {vendor_name}\{module_name}Module\Http\Controller\Admin;
+<?php namespace {{vendor_name}}\{{module_name}}Module\Http\Controller\Admin;
 
 use Anomaly\Streams\Platform\Http\Controller\AdminController;
 
 /**
- * Class {module_name}Controller
+ * Class {{module_name}}Controller
  *
-{docblock}
- * @package   {vendor_name}\{module_name}Module\Http\Controller\Admin
+{{docblock}}
+ * @package   {{vendor_name}}\{{module_name}}Module\Http\Controller\Admin
  */
 
-class {module_name}Controller extends AdminController
+class {{module_name}}Controller extends AdminController
 {
   /**
    * Return admin home view.
