@@ -1,15 +1,15 @@
-<?php namespace {vendor_name}\{module_name}Module;
+<?php namespace {{vendor_name}}\{{module_name}}Module;
 
 use Anomaly\Streams\Platform\Addon\Module\Module;
 
 /**
- * Class {module_name}Module
+ * Class {{module_name}}Module
  *
-{docblock}
- * @package   {vendor_name}\{module_name}Module
+{{docblock}}
+ * @package   {{vendor_name}}\{{module_name}}Module
  */
 
-class {module_name}Module extends Module
+class {{module_name}}Module extends Module
 {
     /**
      * The navigation icon.
