@@ -1,15 +1,15 @@
-<?php namespace {vendor_name}\{module_name}Module;
+<?php namespace {{vendor_name}}\{{module_name}}Module;
 
 use Anomaly\Streams\Platform\Addon\AddonServiceProvider;
 
 /**
- * Class {module_name}ModuleServiceProvider
+ * Class {{module_name}}ModuleServiceProvider
  *
-{docblock}
- * @package   {vendor_name}\{module_name}Module
+{{docblock}}
+ * @package   {{vendor_name}}\{{module_name}}Module
  */
 
-class {module_name}ModuleServiceProvider extends AddonServiceProvider
+class {{module_name}}ModuleServiceProvider extends AddonServiceProvider
 {
     protected $plugins = [];
 
