@@ -2,7 +2,8 @@
   date: 2016-09-25
   changes:
   - Add configuration option to turn off module landing page
-
+  - Change template for Twig
+  
 1.0.0
   date: 2016-09-08
   changes:
